2002-03-11  Richard Williamson  <rjw@apple.com>

Re-implemented QPainter::drawTiledPixmap to use core graphics patterns.  Currently this depends
on SPI.  The performance boost is huge osx.macnn.com draws 40x faster now.

	* src/kwq/KWQPainter.mm: (QPainter::drawTiledPixmap):

2002-03-08  Richard Williamson  <rjw@apple.com>

Re-implemented KWQFont to lazily request font from NSFontManager instead of
user converFont:.  I did this after sampling loads of http://www.apple.com/retail/theater
and found that converting fonts was very expensive.

	* src/kwq/KWQFont.mm: (QFont::defaultNSFont), (QFont::_initializeWithFont),
	(QFont::QFont), (QFont::_free), (QFont::getFont), (QFont::pixelSize),
	(QFont::family), (QFont::setFamily), (QFont::setPixelSizeFloat),
	(QFont::setWeight), (QFont::weight), (QFont::setItalic), (QFont::italic),
	(QFont::bold), (QFont::operator!=):
	* src/kwq/KWQFontMetrics.mm: (QFontMetrics::QFontMetrics):
	* src/kwq/KWQKHTMLPart.mm: (KHTMLPart::requestFrame):
	* src/kwq/KWQPainter.mm: (QPainter::drawText), (QPainter::drawUnderlineForText):
	* src/kwq/qt/qfont.h:

2002-03-08  Richard Williamson  <rjw@apple.com>

        Instrumentation of the text fragment metrics cache.
        Added _FAST_QSTRING_TO_NSSTRING.
        
	* src/kwq/KWQFontMetrics.mm: (-[KWQLayoutFragment initWithString:attributes:]),
	(-[KWQLayoutFragment boundingRect]), (-[KWQLayoutFragment compare:]),
	(+[KWQLayoutInfo _dumpLayoutCache:]), (+[KWQLayoutInfo _dumpAllLayoutCaches]),
	(-[KWQLayoutInfo rectForString:]), (QFontMetrics::width),
	(QFontMetrics::boundingRect), (QFontMetrics::size):
	* src/kwq/KWQMetrics.h:
	* src/kwq/qt/qstring.h:

2002-03-08  John Sullivan  <sullivan@apple.com>

	* src/kwq/KWQKHTMLPart.mm: (KHTMLPart::openURL), (KHTMLPart::end):
	Changed openURL() and end() messages to use debug levels. You
	can see these by setting your WebKitLogLevel mask to include 
	0x00000008

2002-03-07  John Sullivan  <sullivan@apple.com>
